--- a/package.json
+++ b/package.json
@@ -4,12 +4,18 @@
     "description": "",
     "main": "index.js",
     "scripts": {
-        "dev": "parcel index.html"
+        "start:db": "npx json-server -w db.json",
+        "start:server": "parcel index.html",
+        "dev": "concurrently \" npm run start:db \"  \"npm run start:server\" "
     },
     "keywords": [],
     "author": "",
     "license": "ISC",
     "devDependencies": {
         "parcel": "^2.0.1"
+    },
+    "dependencies": {
+        "axios": "^0.24.0",
+        "concurrently": "^6.4.0"
     }
 }
